Updates from ShareLaTeX

--- a/Project2/report/Project2.tex
+++ b/Project2/report/Project2.tex
@@ -233,7 +233,7 @@ By the same method as for the buckling beam we can discretize the Schr$\ddot{\ma
 \subsection{Jacobi's method}
 
 \begin{figure}[t]
-\mbox{\epsfig{figure=iterationspersize.pdf,width=\linewidth,clip=}}
+\mbox{\epsfig{figure=iterationspersize15.pdf,width=\linewidth,clip=}}
 \caption{Logarithmic plot of }
 \label{fig:fig1}
 \end{figure}
@@ -241,7 +241,7 @@ By the same method as for the buckling beam we can discretize the Schr$\ddot{\ma
 \subsection{Quantum dots, single electron}
 
 \begin{figure}[t]
-\mbox{\epsfig{figure=GSEperOMGr.pdf,width=\linewidth,clip=}}
+\mbox{\epsfig{figure=GSEperOMGr15.pdf,width=\linewidth,clip=}}
 \caption{}
 \label{fig:fig2}
 \end{figure}
